force-app/main/default/objects/Case/fields/Analyse_IA__c.field-meta.xml
<CustomField>
    <fullName>Analyse_IA__c</fullName>
    <label>Analyse_IA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>