force-app/main/default/objects/Case/fields/Call_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_ID__c</fullName>
    <label>Call ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>