force-app/main/default/objects/Case/fields/Canal_d_achat__c.field-meta.xml
<CustomField>
    <fullName>Canal_d_achat__c</fullName>
    <label>Canal d&apos;achat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boutique</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Héritage</fullName>
            </value>
            <value>
                <fullName>Seconde main</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>