force-app/main/default/objects/Case/fields/Canal_Retour__c.field-meta.xml
<CustomField>
    <fullName>Canal_Retour__c</fullName>
    <description>Mode de restitution du produit après traitement SAV.</description>
    <label>Canal de retour souhaité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Livraison_Domicile</fullName>
                <default>true</default>
                <label>Livraison à domicile</label>
            </value>
            <value>
                <fullName>Retrait_Boutique</fullName>
                <label>Retrait en boutique</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>