force-app/main/default/objects/Case/fields/Categorie_SAV__c.field-meta.xml
<CustomField>
    <fullName>Categorie_SAV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Categorie SAV</label>
    <referenceTo>Categorie_SAV__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>