force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demande information</fullName>
            </value>
            <value>
                <fullName>Echange produit</fullName>
            </value>
            <value>
                <fullName>Réclamation</fullName>
            </value>
            <value>
                <fullName>Retour produit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>