force-app/main/default/objects/Case/fields/Client_segment__c.field-meta.xml
<CustomField>
    <fullName>Client_segment__c</fullName>
    <label>Client segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>