force-app/main/default/objects/Case/fields/Date_d_achat__c.field-meta.xml
<CustomField>
    <fullName>Date_d_achat__c</fullName>
    <label>Date d&apos;achat</label>
    <type>Date</type>
</CustomField>