force-app/main/default/objects/Case/fields/Draft_Response__c.field-meta.xml
<CustomField>
    <fullName>Draft_Response__c</fullName>
    <label>Réponse brouillon</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>