force-app/main/default/objects/Case/fields/Langue_Client__c.field-meta.xml
<CustomField>
    <fullName>Langue_Client__c</fullName>
    <description>Langue préférée du client pour les communications liées à ce Case.</description>
    <label>Langue client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fr</fullName>
                <default>true</default>
                <label>Français</label>
            </value>
            <value>
                <fullName>en</fullName>
                <label>English</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>