force-app/main/default/objects/Case/fields/Mod_le_de_brouillon_utilis__c.field-meta.xml
<CustomField>
    <fullName>Mod_le_de_brouillon_utilis__c</fullName>
    <label>Modèle de brouillon utilisé</label>
    <type>TextArea</type>
</CustomField>