force-app/main/default/objects/Case/fields/Order_number__c.field-meta.xml
<CustomField>
    <fullName>Order_number__c</fullName>
    <label>Order number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>