force-app/main/default/objects/Case/fields/Photos_Demande_URL__c.field-meta.xml
<CustomField>
    <fullName>Photos_Demande_URL__c</fullName>
    <label>Photos de la demande (JSON)</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Tableau JSON des URLs des photos uploadées par le client lors de la création du Case. Format : ["url1","url2"]</description>
</CustomField>