force-app/main/default/objects/Case/fields/Produit_Client__c.field-meta.xml
<CustomField>
    <fullName>Produit_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit Client</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>