force-app/main/default/objects/Case/fields/Produit_concern__c.field-meta.xml
<CustomField>
    <fullName>Produit_concern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit concerné</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>