force-app/main/default/objects/Case/fields/Reponse_Brouillon__c.field-meta.xml
<CustomField>
    <fullName>Reponse_Brouillon__c</fullName>
    <label>Reponse_Brouillon</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>