force-app/main/default/objects/Case/fields/Sous_Garantie__c.field-meta.xml
<CustomField>
    <fullName>Sous_Garantie__c</fullName>
    <formula>IF( (TODAY() - Date_d_achat__c) &lt;= 730, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sous Garantie</label>
    <type>Checkbox</type>
</CustomField>