force-app/main/default/objects/Case/fields/Statut_du_brouillon__c.field-meta.xml
<CustomField>
    <fullName>Statut_du_brouillon__c</fullName>
    <label>Statut du brouillon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente de révision</fullName>
            </value>
            <value>
                <fullName>Approuvé</fullName>
            </value>
            <value>
                <fullName>Rejeté</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>