force-app/main/default/objects/Case/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disponibilité produit</fullName>
            </value>
            <value>
                <fullName>Suivi commande</fullName>
            </value>
            <value>
                <fullName>Information sur prix / promotion</fullName>
            </value>
            <value>
                <fullName>Informations sur personnalisation</fullName>
            </value>
            <value>
                <fullName>Taille / ajustement</fullName>
            </value>
            <value>
                <fullName>Couleur / modèle</fullName>
            </value>
            <value>
                <fullName>Produit défectueux</fullName>
            </value>
            <value>
                <fullName>Produit non conforme à la commande</fullName>
            </value>
            <value>
                <fullName>Produit endommagé / défectueux</fullName>
            </value>
            <value>
                <fullName>Livraison retardée</fullName>
            </value>
            <value>
                <fullName>Erreur de facturation</fullName>
            </value>
            <value>
                <fullName>Mauvais produit livré</fullName>
            </value>
            <value>
                <fullName>Remboursement demandé</fullName>
            </value>
            <value>
                <fullName>Retour pour non-conformité</fullName>
            </value>
            <value>
                <fullName>Comment faire un retour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>