force-app/main/default/objects/Case/recordTypes/Commande_Retour_Info.recordType-meta.xml
<RecordType>
    <fullName>Commande_Retour_Info</fullName>
    <active>true</active>
    <businessProcess>Processus Standard Case</businessProcess>
    <label>Commande / Retour / Info</label>
</RecordType>