force-app/main/default/objects/Case/recordTypes/Demande_Information.recordType-meta.xml
<RecordType>
    <fullName>Demande_Information</fullName>
    <active>false</active>
    <businessProcess>Processus Standard Case</businessProcess>
    <label>Demande_Information</label>
</RecordType>