force-app/main/default/objects/Case/recordTypes/Echange_Produit.recordType-meta.xml
<RecordType>
    <fullName>Echange_Produit</fullName>
    <active>false</active>
    <businessProcess>Processus Standard Case</businessProcess>
    <label>Echange_Produit</label>
</RecordType>