force-app/main/default/objects/Case/recordTypes/Reclamation.recordType-meta.xml
<RecordType>
    <fullName>Reclamation</fullName>
    <active>false</active>
    <businessProcess>Processus Standard Case</businessProcess>
    <label>Reclamation</label>
</RecordType>