force-app/main/default/objects/Case/recordTypes/Retour_Produit.recordType-meta.xml
<RecordType>
    <fullName>Retour_Produit</fullName>
    <active>false</active>
    <businessProcess>Processus Standard Case</businessProcess>
    <label>Retour_Produit</label>
</RecordType>