force-app/main/default/objects/Case/listViews/Closed_cases.listView-meta.xml
<ListView>
    <fullName>Closed_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Category__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.MILESTONE_TIMER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
    </filters>
    <label>Closed cases</label>
</ListView>