force-app/main/default/objects/Case/listViews/Comptabilit_Case.listView-meta.xml
<ListView>
    <fullName>Comptabilit_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.MILESTONE_TIMER</columns>
    <columns>Category__c</columns>
    <filterScope>Queue</filterScope>
    <label>Service client / Réclamations</label>
    <queue>Service_client_R_clamations</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>