force-app/main/default/objects/Case/listViews/Logistique_Case.listView-meta.xml
<ListView>
    <fullName>Logistique_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Service client / Echanges</label>
    <queue>Service_client_Echanges</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>