force-app/main/default/objects/Case/listViews/Mes_demandes_SAV.listView-meta.xml
<ListView>
    <fullName>Mes_demandes_SAV</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.MILESTONE_TIMER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Mes demandes SAV</label>
</ListView>