force-app/main/default/objects/Case/listViews/Service_client_Case.listView-meta.xml
<ListView>
    <fullName>Service_client_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Service client / Retours</label>
    <queue>Service_client_Retours</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>