force-app/main/default/objects/Case/listViews/Supervision_Service_Client_Case.listView-meta.xml
<ListView>
    <fullName>Supervision_Service_Client_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Supervision Service Client</label>
    <queue>Supervision_Service_Client</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>