force-app/main/default/objects/Case/listViews/Support_produit_Case.listView-meta.xml
<ListView>
    <fullName>Support_produit_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Support produit</label>
    <queue>Support_produit</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>