force-app/main/default/objects/Case/listViews/Support_t_l_phonique_Case.listView-meta.xml
<ListView>
    <fullName>Support_t_l_phonique_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Support téléphonique</label>
    <queue>Support_t_l_phonique</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>